--- a/MWDotNetCore.PizzaApi/MWDotNetCore.PizzaApi.csproj
+++ b/MWDotNetCore.PizzaApi/MWDotNetCore.PizzaApi.csproj
@@ -14,4 +14,8 @@
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.18" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MWDotNetCore.Share\MWDotNetCore.Share.csproj" />
+  </ItemGroup>
+
 </Project>
